# ArucoCameraPoseTest

./: .gitignore  CMakeLists.txt  README.md  detect.cpp  single_image_estimate_pose
src/: aruco_dictionary_strings.h  calibrate.cpp  single_image_detect.cpp  single_image_estimate_pose.cpp  video_estimate_pose.cpp
